--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework2</title>
 </head>
 
 <body>
+    <div>
+        <input type="text" name="rating" id="userInput" placeholder="Введите Ваш отзыв">
+        <button id="checkInput">Отправить отзыв</button>
+        <div id="hintForUser"></div>
+        <div class="ratingData"></div>
+    </div>
     <script src="1.js"></script>
     <script src="2.js"></script>
 </body>
