--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework2</title>
+    <title>Homework3</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <input type="text" name="rating" id="userInput" placeholder="Введите Ваш отзыв">
-        <button id="checkInput">Отправить отзыв</button>
-        <div id="hintForUser"></div>
-        <div class="ratingData"></div>
+    <div class="container">
+        <div class="addComment"><a href="add.html">Добавить отзыв о продукте</a></div>
+        <div class="showComment"><a href="show.html">Просмотреть отзывы о продуктах</a></div>
     </div>
-    <script src="1.js"></script>
-    <script src="2.js"></script>
+    <script src="3.js"></script>
 </body>
 
 </html>
